--- a/Log.html
+++ b/Log.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>100 Days of Code Log</title>
+    <title>100 Days of Code Log by Job Kroon</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, Inter, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
             line-height: 1.6;
             margin: 20px;
         }
+        p {
+            color: #555;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #555;
+            text-decoration: none;
+        }
         h1 {
-            color: #333;
+            color: #555;
+        }
+        h2 {
+            color: #cdcdcd;
+            font-weight: 300;
         }
         .log-entry {
             margin-bottom: 20px;
             padding: 10px;
             border: 1px solid #ddd;
-            border-radius: 5px;
+            border-radius: 8px;
             background-color: #f9f9f9;
         }
         .log-entry h2 {
             margin: 0;
             font-size: 1.2em;
             color: #555;
+            font-weight: 700;
         }
         .log-entry p {
             margin: 5px 0 0;
@@ -31,15 +47,18 @@
     </style>
 </head>
 <body>
-    <h1>100 Days of Code Log</h1>
+    <h1>100 Days of Code 2025 Log</h1>
+    <h2>by Job Kroon</h2>
+    <p>Welcome to my 100 Days of Code log! Here, I will document my journey as I learn Swift and work on various projects. Each entry will include the day number, date, and a brief description of what I learned or accomplished.</p>
+    <p>Feel free to <a href="https://bsky.app/profile/jkroon.bsky.social">follow along on Bluesky</a> and check back for updates!</p>
     <div id="log-container">
         <!-- Log entries will go here -->
     </div>
     <script>
         const logEntries = [
-            { day: 1, description: "Learning the basic syntax of Swift (operators, strings, characters and collection types.)" },
-            
-            // Add more entries as needed
+            { day: 1, date: "16-04-2024", description: "Learning the basic syntax of Swift (operators, strings, characters and collection types). Setting up and styling this log file and a github repository." },
+            { day: 2, date:"", description: "Description comes here" },
+            // Add more entries here
         ];
 
         const logContainer = document.getElementById('log-container');
@@ -49,6 +68,7 @@
             logDiv.classList.add('log-entry');
             logDiv.innerHTML = `
                 <h2>Day ${entry.day}</h2>
+                <p><strong>Date:</strong> ${entry.date}</p>
                 <p>${entry.description}</p>
             `;
             logContainer.appendChild(logDiv);
