Latest update to log.html

--- a/Log.html
+++ b/Log.html
@@ -57,7 +57,7 @@
     <script>
         const logEntries = [
             { day: 1, date: "16-04-2024", description: "Learning the basic syntax of Swift (operators, strings, characters and collection types). Setting up and styling this log file and a github repository." },
-            { day: 2, date:"", description: "Description comes here" },
+            { day: 2, date:"", description: "Description of my activities comes here" },
             // Add more entries here
         ];
 
