--- a/Log.html
+++ b/Log.html
@@ -56,8 +56,8 @@
     </div>
     <script>
         const logEntries = [
-            { day: 1, date: "16-04-2024", description: "Learning the basic syntax of Swift (operators, strings, characters and collection types). Setting up and styling this log file and a github repository." },
-            { day: 2, date:"", description: "Description of my activities comes here" },
+            { day: 1, date: "16-04-2025", description: "Learning the basic syntax of Swift (operators, strings, characters and collection types). Setting up and styling this log file and a github repository." },
+            { day: 2, date:"17-04-2025", description: "A deep dive in declarations, let and var and getting to know mutables NSMutableArray NSArray" },
             // Add more entries here
         ];
 
