modified:   .DS_Store

--- a/Log.html
+++ b/Log.html
@@ -59,7 +59,7 @@
             { day: 1, date: "16-04-2025", description: "Learning the basic syntax of Swift (operators, strings, characters and collection types). Setting up and styling this log file and a github repository." },
             { day: 2, date:"17-04-2025", description: "A deep dive in declarations, let and var and getting to know mutables NSMutableArray NSArray" },
             { day: 3, date:"18-04-2025", description: "Today I am traveling a full day, so getting in some #swift documentation and making notes. Also some learning in the Encode app. About if and switch statements to make conditionals, and use for-in, while, and repeat-while to make loops." },
-            { day: 4, date:"21-04-2025", description: "A deep dive on Operators in a playground in Xcode." },
+            { day: 4, date:"21-04-2025", description: "A deep dive on Operators in a playground in Xcode. And as an extra I had some git commands trouble so I figured that one out too." },
 
             // Add more entries here
         ];
