--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             { day: 4, date:"21-04-2025", description: "A deep dive on Operators in a playground in Xcode. unary prefix, postix, binary infix and ternary operators. As an extra I had some git commands trouble so I figured that one out too." },
             { day: 5, date:"22-04-2025", description: "Deep dive in functions. Define and call functions, label their arguments, and use their return values. Like the documentation says. Tough day." },
             { day: 6, date:"23-04-2025", description: "All about Closures. Some documentation and practice in a Swift Playground. And I got hired today as a network engineer! Awesome day!" },
+            { day: 7, date:"24-04-2025", description: "Structures and Classes. A recap of yesterdays lessons about Closures. Short lesson today." },
+
             // Add more entries here
         ];
 
