--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             { day: 6, date: "23-04-2025", description: "All about Closures. Some documentation and practice in a Swift Playground. And I got hired today as a network engineer! Awesome day!" },
             { day: 7, date: "24-04-2025", description: "Structures and Classes. A recap of yesterdays lessons about Closures. Short lesson today." },
             { day: 8, date: "25-04-2025", description: "Getting my head around Enumerations. Another playground session and a recap of the past week, which has been a challenging one while traveling. I'll be back on Monday!" },
+            { day: 9, date: "28-04-2025", description: "All about Classes and some Structures today. Messing around in Xcode and a recap of the past week. New week, lets go!" },           
             // Add more entries here
         ];
 
