--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             { day: 7, date: "24-04-2025", description: "Structures and Classes. A recap of yesterdays lessons about Closures. Short lesson today." },
             { day: 8, date: "25-04-2025", description: "Getting my head around Enumerations. Another playground session and a recap of the past week, which has been a challenging one while traveling. I'll be back on Monday!" },
             { day: 9, date: "28-04-2025", description: "All about Classes and some Structures today. Messing around in Xcode and a recap of the past week. New week, lets go!" },           
+            { day: 10, date: "29-04-2025", description: "I’m completely exhausted for the day and there is no way I spend a whole night on coding, I’ve had my fair share of late nights. So for today a lesson in Protocols in the documentation and making notes. Enjoying the outdoors and sunny weather!" },
             // Add more entries here
         ];
 
