--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         const logContainer = document.getElementById('log-container');
 
-        // for.Each entry in logEntries, create a div and append it to the logContainer
+        // forEach entry in logEntries, create a div and append it to the logContainer
         logEntries.forEach(entry => {
             const logDiv = document.createElement('div');
             logDiv.classList.add('log-entry');
