--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             { day: 8, date: "25-04-2025", description: "Getting my head around Enumerations. Another playground session and a recap of the past week, which has been a challenging one while traveling. I'll be back on Monday!" },
             { day: 9, date: "28-04-2025", description: "All about Classes and some Structures today. Messing around in Xcode and a recap of the past week. New week, lets go!" },           
             { day: 10, date: "29-04-2025", description: "I’m completely exhausted for the day and there is no way I spend a whole night on coding, I’ve had my fair share of late nights. So for today a lesson in Protocols in the documentation and making notes. Enjoying the outdoors and sunny weather!" },
+            { day: 11, date: "30-04-2025", description: "Exploring Xcode and actually building a some functions from a todo app. See how it works." },   
+            
             // Add more entries here
         ];
 
