--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             { day: 9, date: "28-04-2025", description: "All about Classes and some Structures today. Messing around in Xcode and a recap of the past week. New week, lets go!" },           
             { day: 10, date: "29-04-2025", description: "I’m completely exhausted for the day and there is no way I spend a whole night on coding, I’ve had my fair share of late nights. So for today a lesson in Protocols in the documentation and making notes. Enjoying the outdoors and sunny weather!" },
             { day: 11, date: "30-04-2025", description: "Exploring Xcode and actually building a some functions from a todo app. See how it works." },   
-            
+            { day: 12, date: "05-05-2025", description: "Another travel weekend, so I have some catching up to do. Continuing exploring the todo app in Xcode, focusing on data storage. Some documentation and note making. Figuring out how to setup a #digitalgarden, to make these notes public." },
             // Add more entries here
         ];
 
