update index.html with daily log

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             { day: 12, date: "05-05-2025", description: "Another travel weekend, so I have some catching up to do. Continuing exploring the todo app in Xcode, focusing on data storage. Some documentation and note making. Figuring out how to setup a #digitalgarden, to make these notes public." },
             { day: 13, date: "06-05-2025", description: "Today I am diving in viewcontrollers in Xcode. Building functions for a todo app. Creating classes for the UI and functions to add tasks." },
             { day: 14, date: "07-05-2025", description: "A little recap of the functions I built in Xcode. Also, as I'm setting up a home server, I've been installing docker and trying to figure out how to securely self host my domains and server. No not too much coding, but still learning. Tomorrow is Swift course again!" },
-           
+            { day: 15, date: "08-05-2025", description: "Continue building on my Swift todo app in Xcode. Just getting to know the software and working with the ViewControllers. Completely different experience than for example React and webdev. It's fun though. Also some documentation." },
+            
             // Add more entries here
         ];
 
