Update index.html daily logs

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             { day: 13, date: "06-05-2025", description: "Today I am diving in viewcontrollers in Xcode. Building functions for a todo app. Creating classes for the UI and functions to add tasks." },
             { day: 14, date: "07-05-2025", description: "A little recap of the functions I built in Xcode. Also, as I'm setting up a home server, I've been installing docker and trying to figure out how to securely self host my domains and server. No not too much coding, but still learning. Tomorrow is Swift course again!" },
             { day: 15, date: "08-05-2025", description: "Continue building on my Swift todo app in Xcode. Just getting to know the software and working with the ViewControllers. Completely different experience than for example React and webdev. It's fun though. Also some documentation." },
-            
+            { day: 16, date: "09-05-2025", description: "Some Encode lessons and a little note taking. Writing stuff down makes things so much better to remember!" },
             // Add more entries here
         ];
 
