update index.html - Added log entry for day 18

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             { day: 15, date: "08-05-2025", description: "Continue building on my Swift todo app in Xcode. Just getting to know the software and working with the ViewControllers. Completely different experience than for example React and webdev. It's fun though. Also some documentation." },
             { day: 16, date: "09-05-2025", description: "Some Encode lessons and a little note taking. Writing stuff down makes things so much better to remember!" },
             { day: 17, date: "10-05-2025", description: "Finished the Swift to do app. A simple app which thought me creating functions, closures and saves different states on the device. Nice to figuring out Xcode and work with a storyboard." },
+            { day: 18, date: "14-05-2025", description: "Getting back practicing functions, closures and some error handling in Xcode. Figuring out my next thing to build as a mini project." },
             // Add more entries here
         ];
 
