--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=icon href="https://img.icons8.com/?size=100&id=VbMADmY3D22e&format=png&color=000000" type="image/x-icon">
     <title>100 Days of Code Log by Job Kroon</title>
     <style>
         body {
