update index.html - Refined title and headings for consistency with #100DaysOfCode format

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=icon href="https://img.icons8.com/?size=100&id=VbMADmY3D22e&format=png&color=000000" type="image/x-icon">
-    <title>100 Days of Code Log by Job Kroon</title>
+    <title>#100DaysOfCode Log by Job Kroon</title>
     <style>
         body {
         /* Styling page */
@@ -49,7 +49,8 @@
     </style>
 </head>
 <body>
-    <h1>100 Days of Code 2025 Log</h1>
+    <h1>#100DaysOfCode</h1>
+    <h1>Daily logs 2025</h1>
     <h2>by Job Kroon</h2>
     <p>Welcome to my 100 Days of Code log! Here, I will document my journey as I learn Swift and work on various projects. Each entry will include the day number, date, and a brief description of what I learned or accomplished.</p>
     <p>Feel free to <a href="https://bsky.app/profile/jkroon.bsky.social">follow along on Bluesky</a> and check back for updates!</p>
