update index.html - Changed h1 color to #2820ff and added h3 styling

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
             text-decoration: none;
         }
         h1 {
-            color: #555;
+            color: #2820ff;
         }
         h2 {
             color: #cdcdcd;
+            font-weight: 300;
+        }
+        h3 {
+            color: #555;
             font-weight: 300;
         }
         .log-entry {
