update index.html - Adjusted h1 color to #007bff, modified h3 styling, and corrected heading structure for improved consistency

--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
             text-decoration: none;
         }
         h1 {
-            color: #2820ff;
+            color: #007bff;
+            margin: 0;
         }
         h2 {
             color: #cdcdcd;
             font-weight: 300;
         }
         h3 {
+            margin-top: 0;
+            padding-bottom: 2%;
             color: #555;
-            font-weight: 300;
+            font-weight: 700;
         }
         .log-entry {
             margin-bottom: 20px;
@@ -54,7 +57,7 @@
 </head>
 <body>
     <h1>#100DaysOfCode</h1>
-    <h1>Daily logs 2025</h1>
+    <h3>Daily logs 2025</h3>
     <h2>by Job Kroon</h2>
     <p>Welcome to my 100 Days of Code log! Here, I will document my journey as I learn Swift and work on various projects. Each entry will include the day number, date, and a brief description of what I learned or accomplished.</p>
     <p>Feel free to <a href="https://bsky.app/profile/jkroon.bsky.social">follow along on Bluesky</a> and check back for updates!</p>
