update index.html - Added daily log entry

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             { day: 16, date: "09-05-2025", description: "Some Encode lessons and a little note taking. Writing stuff down makes things so much better to remember!" },
             { day: 17, date: "10-05-2025", description: "Finished the Swift to do app. A simple app which thought me creating functions, closures and saves different states on the device. Nice to figuring out Xcode and work with a storyboard." },
             { day: 18, date: "14-05-2025", description: "Getting back practicing functions, closures and some error handling in Xcode. Figuring out my next thing to build as a mini project." },
+            { day: 19, date: "15-05-2025", description: "TIL Concurrency in Swift. Simultaneous processing of tasks with async await. Some documentation and notes today. I've decided to make a simple weather app. Starting tomorrow!"},
             // Add more entries here
         ];
 
