Update daily log on index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             { day: 19, date: "15-05-2025", description: "TIL Concurrency in Swift. Simultaneous processing of tasks with async await. Some documentation and notes today. I've decided to make a simple weather app. Starting tomorrow!"},
             { day: 20, date: "16-05-2025", description: "Setting up dev environment for my weather app. Starting with some new protocols to get my head around. Have fun today!"},
             { day: 21, date: "22-05-2025", description: "After a little holiday break, back in action! Review of swift course and practicing syntax. Continue on my weather app by integrating API. Next up; I need to learn SwiftUI."},
+            { day: 22, date: "22-05-2025", description: "Not much time today. Some practices with else-if statements and read a little background of SwiftUI. Tomorrow back on the project again."},
             // Add more entries here
         ];
 
