update index.html - Added log entry for day 23 and adjusted formatting for previous entries

--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
             { day: 16, date: "09-05-2025", description: "Some Encode lessons and a little note taking. Writing stuff down makes things so much better to remember!" },
             { day: 17, date: "10-05-2025", description: "Finished the Swift to do app. A simple app which thought me creating functions, closures and saves different states on the device. Nice to figuring out Xcode and work with a storyboard." },
             { day: 18, date: "14-05-2025", description: "Getting back practicing functions, closures and some error handling in Xcode. Figuring out my next thing to build as a mini project." },
-            { day: 19, date: "15-05-2025", description: "TIL Concurrency in Swift. Simultaneous processing of tasks with async await. Some documentation and notes today. I've decided to make a simple weather app. Starting tomorrow!"},
-            { day: 20, date: "16-05-2025", description: "Setting up dev environment for my weather app. Starting with some new protocols to get my head around. Have fun today!"},
-            { day: 21, date: "22-05-2025", description: "After a little holiday break, back in action! Review of swift course and practicing syntax. Continue on my weather app by integrating API. Next up; I need to learn SwiftUI."},
-            { day: 22, date: "23-05-2025", description: "Not much time today. Some practices with else-if statements and read a little background of SwiftUI. Tomorrow back on the project again."},
+            { day: 19, date: "15-05-2025", description: "TIL Concurrency in Swift. Simultaneous processing of tasks with async await. Some documentation and notes today. I've decided to make a simple weather app. Starting tomorrow!" },
+            { day: 20, date: "16-05-2025", description: "Setting up dev environment for my weather app. Starting with some new protocols to get my head around. Have fun today!" },
+            { day: 21, date: "22-05-2025", description: "After a little holiday break, back in action! Review of swift course and practicing syntax. Continue on my weather app by integrating API. Next up; I need to learn SwiftUI." },
+            { day: 22, date: "23-05-2025", description: "Not much time today. Some practices with else-if statements and read a little background of SwiftUI. Tomorrow back on the project again." },
+            { day: 23, date: "24-05-2025", description: "Building my weather app. I'm following instructions from the old swift version (iOS 15), so it's a bit puzzling finding the renewed syntax and functions. But we're getting there!" },
             // Add more entries here
         ];
 
