update index.html - Corrected capitalization in log entry for day 24

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             { day: 21, date: "22-05-2025", description: "After a little holiday break, back in action! Review of swift course and practicing syntax. Continue on my weather app by integrating API. Next up; I need to learn SwiftUI." },
             { day: 22, date: "23-05-2025", description: "Not much time today. Some practices with else-if statements and read a little background of SwiftUI. Tomorrow back on the project again." },
             { day: 23, date: "24-05-2025", description: "Building my weather app. I'm following instructions from the old swift version (iOS 15), so it's a bit puzzling finding the renewed syntax and functions. But we're getting there!" },
-            { day: 24, date: "25-05-2025", description: "small but steady progress. Reading some documentation and stackoverflow because of syntax updates. Integrating it into my project. The base of my project is almost there! Dummy data check! API check! Extensions check!" },
+            { day: 24, date: "25-05-2025", description: "Small but steady progress. Reading some documentation and stackoverflow because of syntax updates. Integrating it into my project. The base of my project is almost there! Dummy data check! API check! Extensions check!" },
             // Add more entries here
         ];
 
