--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             { day: 22, date: "23-05-2025", description: "Not much time today. Some practices with else-if statements and read a little background of SwiftUI. Tomorrow back on the project again." },
             { day: 23, date: "24-05-2025", description: "Building my weather app. I'm following instructions from the old swift version (iOS 15), so it's a bit puzzling finding the renewed syntax and functions. But we're getting there!" },
             { day: 24, date: "25-05-2025", description: "Small but steady progress. Reading some documentation and stackoverflow because of syntax updates. Integrating it into my project. The base of my project is almost there! Dummy data check! API check! Extensions check!" },
+            { day: 25, date: "26-05-2025", description: "Finished up my weather app project by integrating some hard-coded UI elements and testing if the API is getting the right data. Would be a fun project to iterate on. Have a kickass day!" },
             // Add more entries here
         ];
 
