update index.html - Added log entry for day 27

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             { day: 24, date: "25-05-2025", description: "Small but steady progress. Reading some documentation and stackoverflow because of syntax updates. Integrating it into my project. The base of my project is almost there! Dummy data check! API check! Extensions check!" },
             { day: 25, date: "26-05-2025", description: "Finished up my weather app project by integrating some hard-coded UI elements and testing if the API is getting the right data. Would be a fun project to iterate on. Have a kickass day!" },
             { day: 26, date: "27-05-2025", description: "Day 26: Integrating a login screen for my weather app. Reading the docs for best practice. No too much code today, because I've got places to be." },
+            { day: 27, date: "28-05-2025", description: "Just some asynchronous lessons and app practice today. Rest is needed!"}
             // Add more entries here
         ];
 
