update index.html - Corrected spelling in day 29 log entry

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             { day: 26, date: "27-05-2025", description: "Day 26: Integrating a login screen for my weather app. Reading the docs for best practice. No too much code today, because I've got places to be." },
             { day: 27, date: "28-05-2025", description: "Just some asynchronous lessons and app practice today. Rest is needed!"},
             { day: 28, date: "29-05-2025", description: "Now we're getting somewhere. Created a login view controller. Integrated in my project, next up, #authentication. See ya tomorrow!" },
-            { day: 29, date: "31-05-2025", description: "A little read in #supabase documentation for implementing my database. Also code practice." },
+            { day: 29, date: "31-05-2025", description: "A little read in Supabase documentation for implementing my database. Also code practice." },
             // Add more entries here
         ];
 
