update index.html - Corrected date for day 30 and added log entries for days 31 and 32

--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
             { day: 27, date: "28-05-2025", description: "Just some asynchronous lessons and app practice today. Rest is needed!"},
             { day: 28, date: "29-05-2025", description: "Now we're getting somewhere. Created a login view controller. Integrated in my project, next up, #authentication. See ya tomorrow!" },
             { day: 29, date: "31-05-2025", description: "A little read in Supabase documentation for implementing my database. Also code practice." },
-            { day: 30, date: "01-08-2025", description: "Did some error handling states for a login flow. Integration of User data and profile settings. Have a good sunday!" },
+            { day: 30, date: "01-06-2025", description: "Did some error handling states for a login flow. Integration of User data and profile settings. Have a good sunday!" },
+            { day: 31, date: "02-06-2025", description: "So not so much code except for some code practice and documentation. Also onboarding as network engineer. Think that counts, learning all about networks and cables!" },
+            { day: 32, date: "03-06-2025", description: "So not so much code except for some code practice and documentation. Also onboarding as network engineer. Think that counts, learning all about networks and cables!" },
+
             // Add more entries here
         ];
 
