--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             { day: 30, date: "01-06-2025", description: "Did some error handling states for a login flow. Integration of User data and profile settings. Have a good sunday!" },
             { day: 31, date: "02-06-2025", description: "So not so much code except for some code practice and documentation. Also onboarding as network engineer. Think that counts, learning all about networks and cables!" },
             { day: 32, date: "03-06-2025", description: "So not so much code except for some code practice and documentation. Also onboarding as network engineer. Think that counts, learning all about networks and cables!" },
-
+            { day: 33, date: "08-06-2025", description: "Still going strong, but I only have time to code in my weekends for now. Today was about integrating #Supabase into my project to make my weather symbols show up dynamic. After this; user data integration." },
             // Add more entries here
         ];
 
