--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=icon href="https://img.icons8.com/?size=100&id=mcCRHk2xvR7f&format=png&color=000000" type="image/x-icon">
-    <title>#100DaysOfCode Log by Job Kroon</title>
+    <title>#100DaysOfCode Log by Job Kroon</title> 
+    <img src="https://img.icons8.com/?size=100&id=mcCRHk2xvR7f&format=png&color=000000" alt="Black outlined window containing a pair of angled code brackets on a white background representing software development in a clean and modern style" width="50" height="50">
     <style>
         body {
         /* Styling page */
