--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
             { day: 32, date: "03-06-2025", description: "So not so much code except for some code practice and documentation. Also onboarding as network engineer. Think that counts, learning all about networks and cables!" },
             { day: 33, date: "08-06-2025", description: "Still going strong, but I only have time to code in my weekends for now. Today was about integrating #Supabase into my project to make my weather symbols show up dynamic. After this; user data integration." },
             { day: 34, date: "09-06-2025", description: "Setting up database records for different symbols and images. Getting familiar with Supabase's database structure and implementing the necessary tables and relationships." },
+            { day: 35, date: "14-06-2025", description: "Finishing up my weather app project and my Swift course. I'm planning and setting up a home server to host my own domain and figuring out a new Swift project to build." },
+            { day: 36, date: "15-06-2025", description: "Finishing up my weather app project and my Swift course. I'm planning and setting up a home server to host my own domain and figuring out a new Swift project to build." },
             // Add more entries here
         ];
 
